pypddl_parser/src/pypddl_parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> pddl
Rule 1     pddl -> domain
Rule 2     pddl -> problem
Rule 3     domain -> LPAREN DEFINE_KEY domain_def require_def types_def predicates_def constants_def constraints_def action_def_lst RPAREN
Rule 4     domain -> LPAREN DEFINE_KEY domain_def require_def types_def predicates_def constraints_def action_def_lst RPAREN
Rule 5     domain -> LPAREN DEFINE_KEY domain_def require_def types_def predicates_def action_def_lst RPAREN
Rule 6     problem -> LPAREN DEFINE_KEY problem_def domain_def objects_def init_def goal_def RPAREN
Rule 7     domain_def -> LPAREN DOMAIN_KEY NAME RPAREN
Rule 8     problem_def -> LPAREN PROBLEM_KEY NAME RPAREN
Rule 9     objects_def -> LPAREN OBJECTS_KEY typed_constants_lst RPAREN
Rule 10    constants_def -> LPAREN CONSTANTS_KEY typed_constants_lst RPAREN
Rule 11    init_def -> LPAREN INIT_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
Rule 12    init_def -> LPAREN INIT_KEY ground_predicates_lst RPAREN
Rule 13    goal_def -> LPAREN GOAL_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
Rule 14    require_def -> LPAREN REQUIREMENTS_KEY require_key_lst RPAREN
Rule 15    require_key_lst -> require_key require_key_lst
Rule 16    require_key_lst -> require_key
Rule 17    require_key -> STRIPS_KEY
Rule 18    require_key -> EQUALITY_KEY
Rule 19    require_key -> TYPING_KEY
Rule 20    require_key -> PROBABILISTIC_EFFECTS_KEY
Rule 21    require_key -> NEGATIVE_PRECONDITIONS_KEY
Rule 22    require_key -> REWARDS_KEY
Rule 23    require_key -> DISJUNCTIVE_PRECONDITIONS_KEY
Rule 24    require_key -> CONDITIONAL_EFFECTS_KEY
Rule 25    types_def -> LPAREN TYPES_KEY names_lst RPAREN
Rule 26    predicates_def -> LPAREN PREDICATES_KEY predicate_def_lst RPAREN
Rule 27    predicate_def_lst -> predicate_def predicate_def_lst
Rule 28    predicate_def_lst -> predicate_def
Rule 29    predicate_def -> LPAREN NAME typed_variables_lst RPAREN
Rule 30    predicate_def -> LPAREN NAME RPAREN
Rule 31    constraint -> LPAREN FORALL_KEY LPAREN typed_variables_lst RPAREN LPAREN ATMOSTONCE_KEY literal RPAREN RPAREN
Rule 32    constraints_def -> LPAREN CONSTRAINTS_KEY LPAREN AND_KEY constraints_lst RPAREN RPAREN
Rule 33    constraints_def -> LPAREN CONSTRAINTS_KEY constraint RPAREN
Rule 34    constraints_lst -> constraint constraints_lst
Rule 35    constraints_lst -> constraint
Rule 36    action_def_lst -> action_def action_def_lst
Rule 37    action_def_lst -> action_def
Rule 38    action_def -> LPAREN ACTION_KEY NAME parameters_def action_def_body RPAREN
Rule 39    parameters_def -> PARAMETERS_KEY LPAREN typed_variables_lst RPAREN
Rule 40    parameters_def -> PARAMETERS_KEY LPAREN RPAREN
Rule 41    action_def_body -> precond_def effects_def
Rule 42    precond_def -> PRECONDITION_KEY LPAREN AND_KEY literals_lst RPAREN
Rule 43    precond_def -> PRECONDITION_KEY LPAREN OR_KEY literals_lst RPAREN
Rule 44    precond_def -> PRECONDITION_KEY literal
Rule 45    effects_def -> EFFECT_KEY LPAREN AND_KEY effects_lst RPAREN
Rule 46    effects_def -> EFFECT_KEY effect
Rule 47    effects_lst -> effect effects_lst
Rule 48    effects_lst -> effect
Rule 49    probability_lst -> PROBABILITY literal
Rule 50    probability_lst -> PROBABILITY literal probability_lst
Rule 51    probability_lst -> PROBABILITY LPAREN AND_KEY literals_lst RPAREN
Rule 52    probability_lst -> PROBABILITY LPAREN AND_KEY literals_lst RPAREN probability_lst
Rule 53    effect -> literal
Rule 54    effect -> LPAREN AND_KEY literals_lst RPAREN
Rule 55    effect -> LPAREN PROBABILISTIC_KEY probability_lst RPAREN
Rule 56    effect -> LPAREN WHEN_KEY literal literal RPAREN
Rule 57    effect -> LPAREN WHEN_KEY literal LPAREN PROBABILISTIC_KEY probability_lst RPAREN RPAREN
Rule 58    effect -> LPAREN WHEN_KEY LPAREN AND_KEY literals_lst RPAREN LPAREN AND_KEY literals_lst RPAREN RPAREN
Rule 59    effect -> LPAREN WHEN_KEY LPAREN AND_KEY literals_lst RPAREN LPAREN PROBABILISTIC_KEY probability_lst RPAREN RPAREN
Rule 60    literals_lst -> literal literals_lst
Rule 61    literals_lst -> literal
Rule 62    literal -> LPAREN NOT_KEY predicate RPAREN
Rule 63    literal -> predicate
Rule 64    literal -> LPAREN INCREASE REWARD REWARD_VALUE RPAREN
Rule 65    literal -> ground_predicate
Rule 66    literal -> LPAREN NOT_KEY ground_predicate RPAREN
Rule 67    ground_predicates_lst -> ground_predicate ground_predicates_lst
Rule 68    ground_predicates_lst -> ground_predicate
Rule 69    predicate -> LPAREN NAME variables_lst RPAREN
Rule 70    predicate -> LPAREN EQUALS VARIABLE VARIABLE RPAREN
Rule 71    predicate -> LPAREN NAME RPAREN
Rule 72    reward -> LPAREN INCREASE REWARD REWARD_VALUE RPAREN
Rule 73    ground_predicate -> LPAREN NAME constants_lst RPAREN
Rule 74    ground_predicate -> LPAREN NAME RPAREN
Rule 75    typed_constants_lst -> constants_lst HYPHEN type typed_constants_lst
Rule 76    typed_constants_lst -> constants_lst HYPHEN type
Rule 77    typed_variables_lst -> variables_lst HYPHEN type typed_variables_lst
Rule 78    typed_variables_lst -> variables_lst HYPHEN type
Rule 79    constants_lst -> constant constants_lst
Rule 80    constants_lst -> constant
Rule 81    variables_lst -> VARIABLE variables_lst
Rule 82    variables_lst -> VARIABLE
Rule 83    names_lst -> NAME names_lst
Rule 84    names_lst -> NAME
Rule 85    type -> NAME
Rule 86    constant -> NAME

Terminals, with rules where they appear

ACTION_KEY           : 38
AND_KEY              : 11 13 32 42 45 51 52 54 58 58 59
ATMOSTONCE_KEY       : 31
CONDITIONAL_EFFECTS_KEY : 24
CONSTANTS_KEY        : 10
CONSTRAINTS_KEY      : 32 33
DEFINE_KEY           : 3 4 5 6
DISJUNCTIVE_PRECONDITIONS_KEY : 23
DOMAIN_KEY           : 7
EFFECT_KEY           : 45 46
EQUALITY_KEY         : 18
EQUALS               : 70
FORALL_KEY           : 31
GOAL_KEY             : 13
HYPHEN               : 75 76 77 78
INCREASE             : 64 72
INIT_KEY             : 11 12
LPAREN               : 3 4 5 6 7 8 9 10 11 11 12 13 13 14 25 26 29 30 31 31 31 32 32 33 38 39 40 42 43 45 51 52 54 55 56 57 57 58 58 58 59 59 59 62 64 66 69 70 71 72 73 74
NAME                 : 7 8 29 30 38 69 71 73 74 83 84 85 86
NEGATIVE_PRECONDITIONS_KEY : 21
NOT_KEY              : 62 66
OBJECTS_KEY          : 9
OR_KEY               : 43
PARAMETERS_KEY       : 39 40
PRECONDITION_KEY     : 42 43 44
PREDICATES_KEY       : 26
PROBABILISTIC_EFFECTS_KEY : 20
PROBABILISTIC_KEY    : 55 57 59
PROBABILITY          : 49 50 51 52
PROBLEM_KEY          : 8
REQUIREMENTS_KEY     : 14
REWARD               : 64 72
REWARDS_KEY          : 22
REWARD_VALUE         : 64 72
RPAREN               : 3 4 5 6 7 8 9 10 11 11 12 13 13 14 25 26 29 30 31 31 31 32 32 33 38 39 40 42 43 45 51 52 54 55 56 57 57 58 58 58 59 59 59 62 64 66 69 70 71 72 73 74
STRIPS_KEY           : 17
TYPES_KEY            : 25
TYPING_KEY           : 19
VARIABLE             : 70 70 81 82
WHEN_KEY             : 56 57 58 59
error                : 

Nonterminals, with rules where they appear

action_def           : 36 37
action_def_body      : 38
action_def_lst       : 3 4 5 36
constant             : 79 80
constants_def        : 3
constants_lst        : 73 75 76 79
constraint           : 33 34 35
constraints_def      : 3 4
constraints_lst      : 32 34
domain               : 1
domain_def           : 3 4 5 6
effect               : 46 47 48
effects_def          : 41
effects_lst          : 45 47
goal_def             : 6
ground_predicate     : 65 66 67 68
ground_predicates_lst : 11 12 13 67
init_def             : 6
literal              : 31 44 49 50 53 56 56 57 60 61
literals_lst         : 42 43 51 52 54 58 58 59 60
names_lst            : 25 83
objects_def          : 6
parameters_def       : 38
pddl                 : 0
precond_def          : 41
predicate            : 62 63
predicate_def        : 27 28
predicate_def_lst    : 26 27
predicates_def       : 3 4 5
probability_lst      : 50 52 55 57 59
problem              : 2
problem_def          : 6
require_def          : 3 4 5
require_key          : 15 16
require_key_lst      : 14 15
reward               : 
type                 : 75 76 77 78
typed_constants_lst  : 9 10 75
typed_variables_lst  : 29 31 39 77
types_def            : 3 4 5
variables_lst        : 69 77 78 81

Parsing method: LALR

state 0

    (0) S' -> . pddl
    (1) pddl -> . domain
    (2) pddl -> . problem
    (3) domain -> . LPAREN DEFINE_KEY domain_def require_def types_def predicates_def constants_def constraints_def action_def_lst RPAREN
    (4) domain -> . LPAREN DEFINE_KEY domain_def require_def types_def predicates_def constraints_def action_def_lst RPAREN
    (5) domain -> . LPAREN DEFINE_KEY domain_def require_def types_def predicates_def action_def_lst RPAREN
    (6) problem -> . LPAREN DEFINE_KEY problem_def domain_def objects_def init_def goal_def RPAREN

    LPAREN          shift and go to state 4

    pddl                           shift and go to state 1
    domain                         shift and go to state 2
    problem                        shift and go to state 3

state 1

    (0) S' -> pddl .



state 2

    (1) pddl -> domain .

    $end            reduce using rule 1 (pddl -> domain .)


state 3

    (2) pddl -> problem .

    $end            reduce using rule 2 (pddl -> problem .)


state 4

    (3) domain -> LPAREN . DEFINE_KEY domain_def require_def types_def predicates_def constants_def constraints_def action_def_lst RPAREN
    (4) domain -> LPAREN . DEFINE_KEY domain_def require_def types_def predicates_def constraints_def action_def_lst RPAREN
    (5) domain -> LPAREN . DEFINE_KEY domain_def require_def types_def predicates_def action_def_lst RPAREN
    (6) problem -> LPAREN . DEFINE_KEY problem_def domain_def objects_def init_def goal_def RPAREN

    DEFINE_KEY      shift and go to state 5


state 5

    (3) domain -> LPAREN DEFINE_KEY . domain_def require_def types_def predicates_def constants_def constraints_def action_def_lst RPAREN
    (4) domain -> LPAREN DEFINE_KEY . domain_def require_def types_def predicates_def constraints_def action_def_lst RPAREN
    (5) domain -> LPAREN DEFINE_KEY . domain_def require_def types_def predicates_def action_def_lst RPAREN
    (6) problem -> LPAREN DEFINE_KEY . problem_def domain_def objects_def init_def goal_def RPAREN
    (7) domain_def -> . LPAREN DOMAIN_KEY NAME RPAREN
    (8) problem_def -> . LPAREN PROBLEM_KEY NAME RPAREN

    LPAREN          shift and go to state 6

    domain_def                     shift and go to state 7
    problem_def                    shift and go to state 8

state 6

    (7) domain_def -> LPAREN . DOMAIN_KEY NAME RPAREN
    (8) problem_def -> LPAREN . PROBLEM_KEY NAME RPAREN

    DOMAIN_KEY      shift and go to state 9
    PROBLEM_KEY     shift and go to state 10


state 7

    (3) domain -> LPAREN DEFINE_KEY domain_def . require_def types_def predicates_def constants_def constraints_def action_def_lst RPAREN
    (4) domain -> LPAREN DEFINE_KEY domain_def . require_def types_def predicates_def constraints_def action_def_lst RPAREN
    (5) domain -> LPAREN DEFINE_KEY domain_def . require_def types_def predicates_def action_def_lst RPAREN
    (14) require_def -> . LPAREN REQUIREMENTS_KEY require_key_lst RPAREN

    LPAREN          shift and go to state 11

    require_def                    shift and go to state 12

state 8

    (6) problem -> LPAREN DEFINE_KEY problem_def . domain_def objects_def init_def goal_def RPAREN
    (7) domain_def -> . LPAREN DOMAIN_KEY NAME RPAREN

    LPAREN          shift and go to state 13

    domain_def                     shift and go to state 14

state 9

    (7) domain_def -> LPAREN DOMAIN_KEY . NAME RPAREN

    NAME            shift and go to state 15


state 10

    (8) problem_def -> LPAREN PROBLEM_KEY . NAME RPAREN

    NAME            shift and go to state 16


state 11

    (14) require_def -> LPAREN . REQUIREMENTS_KEY require_key_lst RPAREN

    REQUIREMENTS_KEY shift and go to state 17


state 12

    (3) domain -> LPAREN DEFINE_KEY domain_def require_def . types_def predicates_def constants_def constraints_def action_def_lst RPAREN
    (4) domain -> LPAREN DEFINE_KEY domain_def require_def . types_def predicates_def constraints_def action_def_lst RPAREN
    (5) domain -> LPAREN DEFINE_KEY domain_def require_def . types_def predicates_def action_def_lst RPAREN
    (25) types_def -> . LPAREN TYPES_KEY names_lst RPAREN

    LPAREN          shift and go to state 18

    types_def                      shift and go to state 19

state 13

    (7) domain_def -> LPAREN . DOMAIN_KEY NAME RPAREN

    DOMAIN_KEY      shift and go to state 9


state 14

    (6) problem -> LPAREN DEFINE_KEY problem_def domain_def . objects_def init_def goal_def RPAREN
    (9) objects_def -> . LPAREN OBJECTS_KEY typed_constants_lst RPAREN

    LPAREN          shift and go to state 20

    objects_def                    shift and go to state 21

state 15

    (7) domain_def -> LPAREN DOMAIN_KEY NAME . RPAREN

    RPAREN          shift and go to state 22


state 16

    (8) problem_def -> LPAREN PROBLEM_KEY NAME . RPAREN

    RPAREN          shift and go to state 23


state 17

    (14) require_def -> LPAREN REQUIREMENTS_KEY . require_key_lst RPAREN
    (15) require_key_lst -> . require_key require_key_lst
    (16) require_key_lst -> . require_key
    (17) require_key -> . STRIPS_KEY
    (18) require_key -> . EQUALITY_KEY
    (19) require_key -> . TYPING_KEY
    (20) require_key -> . PROBABILISTIC_EFFECTS_KEY
    (21) require_key -> . NEGATIVE_PRECONDITIONS_KEY
    (22) require_key -> . REWARDS_KEY
    (23) require_key -> . DISJUNCTIVE_PRECONDITIONS_KEY
    (24) require_key -> . CONDITIONAL_EFFECTS_KEY

    STRIPS_KEY      shift and go to state 26
    EQUALITY_KEY    shift and go to state 27
    TYPING_KEY      shift and go to state 28
    PROBABILISTIC_EFFECTS_KEY shift and go to state 29
    NEGATIVE_PRECONDITIONS_KEY shift and go to state 30
    REWARDS_KEY     shift and go to state 31
    DISJUNCTIVE_PRECONDITIONS_KEY shift and go to state 32
    CONDITIONAL_EFFECTS_KEY shift and go to state 33

    require_key_lst                shift and go to state 24
    require_key                    shift and go to state 25

state 18

    (25) types_def -> LPAREN . TYPES_KEY names_lst RPAREN

    TYPES_KEY       shift and go to state 34

